<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="65dp">

    <LinearLayout
        android:id="@+id/main_button_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/button_test_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test Mode" />

        <Button
            android:id="@+id/button_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Normal" />
    </LinearLayout>
<!--    Testing button press here-->
    <LinearLayout
        android:id="@+id/test_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/input_document_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Document ID" />

        <Button
            android:id="@+id/button_set_by_document_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set by Document ID" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Username" />

        <Button
            android:id="@+id/button_set_by_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set by Username" />

        <Button
            android:id="@+id/button_set_to_deviceID1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set to deviceID1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/normal_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text_login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome, "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_login_deviceid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_login_welcome"
            app:layout_constraintVertical_bias="0.04000002" />
    </LinearLayout>
</LinearLayout>
