...
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Event Title -->
                <TextView
                    android:id="@+id/event_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Event Name"
                    android:textColor="#222222"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginBottom="16dp" />

                <!-- Event Date -->
...
